Refactor database connection to MongoDB and update user management
- Replaced PostgreSQL with MongoDB for database operations, updating connection logic in `config/db.go`.
- Modified user model to use MongoDB's ObjectID and adjusted user registration and login logic in `controllers/auth.go`.
- Updated environment variables in `.env` and `.env.example` to support MongoDB and Redis configurations.
- Enhanced user profile and list endpoints to fetch data from MongoDB.
- Cleaned up commented-out code and improved error handling in user-related controllers.

--- a/.env
+++ b/.env
@@ -1,7 +1,3 @@
-DB_USER=crmuser
-DB_PASSWORD=securepassword
-DB_NAME=crmdb
-DB_HOST=localhost
-DB_PORT=5432
-
+MONGO_URI=mongodb://localhost:27017
+REDIS_ADDR=localhost:6379
 JWT_SECRET=supersecret
