--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,3 @@
-DB_USER=crmuser
-DB_PASSWORD=securepassword
-DB_NAME=crmdb
-DB_HOST=localhost
-DB_PORT=5432
-
+MONGO_URI=mongodb://localhost:27017
+REDIS_ADDR=localhost:6379
 JWT_SECRET=supersecret
