Update docker-compose configuration to include environment file and improve build context structure
- Added version specification for Docker Compose.
- Updated the build context format for the app service.
- Included an env_file directive to load environment variables from a .env file.
- Cleaned up comments in the environment variables section for clarity.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,9 +1,14 @@
+version: '3.8'
+
 services:
   app:
-    build: .
+    build:
+      context: .
     container_name: go-backend
     ports:
       - '8080:8080'
+    env_file:
+      - .env
     depends_on:
       - db
       - redis
@@ -14,7 +19,7 @@ services:
       - DB_HOST=db
       - DB_PORT=5432
       - JWT_SECRET=supersecret
-      - REDIS_ADDR=redis:6379 # Point to the Redis container by name
+      - REDIS_ADDR=redis:6379
     restart: on-failure
 
   db:
